# camera_calibration_frontend

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: calib.launch
scripts/: cameracalibrator.py  publish_calib_file.py
scripts/camera_calibration_frontend/: calibrator.py
